/**
 * @author Roman Koretskiy
 */
package quest.protocol;

option java_package = "quest.protocol";
option java_outer_classname = "GameServer";

import "src/main/resources/quest/Common.proto";

message FullState
{
    required Room room = 1;
}

message DeltaState
{

    //список действий.
    repeated Action action = 3;

    message Move
    {
        //двигающаяся сущность
        required uint32 entityId = 1;

        //новая позиция
        required Point newPosition = 2;

        //угол нормали плоскости тела
        optional double angle = 3;
    }

    message Attack
    {
        //атакующая сущность
        required uint32 entityId = 1;

        //жертва
        required uint32 targetId = 2;

        //урон
        required uint32 damage = 3;

        //критичный ли был удар.
        required bool isCritical = 4;
    }

    message Cast
    {

        //скастовавшее существо
        required uint32 entityId = 1;

        //идентификатор заклинания
        required uint32 spellId = 2;

        //заклинание может быть наложено либо на точку, либо на сущность
        optional uint32 targetId = 3;

        optional Point pointTarget = 4;

        //урон
        optional uint32 damage = 5;

        //накладываемое состояние
        optional Effect effect = 6;

        //Этап произнесения заклинания
        optional State state = 7;

        enum Effect
        {
            //ослепление
            BLIND = 1;

            //кровоточащая рана
            BLEED = 2;
        }

        enum State
        {
            //начато произнесение заклинания
            START = 1;

            //закончено произнесение заклинания
            STOP = 2;

            //произносится мгновенно
            INSTANT = 3;

            //прервано
            BREAK = 4;
        }
    }

    //Описывает всех, кто попал в поле видимости адресата.
    message Enter
    {
        repeated Character entity = 1;
    }

    //Показывает всех, кто вышел за пределы видимости адресата
    message Exit
    {
        repeated uint32 entityId = 2;
    }

}

//Описание сервера.
message Shard
{
    optional string ip = 1;
    required uint32 port = 2;
    optional string name = 3;
    optional uint32 playersCount = 4;
}

//Состояние комнаты.
message Room
{
    required uint32 id = 1;

    //размер комнаты
    required Point size = 2;

    //список всех сущностей в комнате
    repeated Character chars = 3;

    //cписок всех происходящих сейчас действий
    repeated Action action = 4;
}
